welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:13: error: not found: value estSurBagel
while (!estSurBagel){
        ^